// system request and administration request supported by coordinator's
// admin-port, specific to index DDLs.

package protobuf;

import "common.proto";
import "index.proto";

// Requested by admin console to create a new index.
message CreateIndexRequest {
    required IndexDefinition index = 1; // will be valid only when state is IndexInitial
}

message CreateIndexResponse {
    required uint64 indexUuid = 1;
    required Error  err       = 2;
}


// Requested by admin console for list of all indexes.
message IndexesRequest {
    repeated uint64 indexUuids = 1;
}

message IndexesResponse {
    required Error  err     = 1;
    repeated Index indexes = 2;
}


// Requested by admin console to delete an index. Error message will be sent
// as response.
message DeleteIndexRequest {
    repeated uint64 indexUuids = 1;
}


// Requested by admin console to start "initial index load" for a set of
// created index. Error message will be sent as response.
message InitialIndexLoadRequest {
    repeated uint64 indexUuids = 1;
}
